src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>LostReasonCode__c</fullName>
        <description>SFDC1 -171 ; if the contract is Closed Lost then the Lost Reason Code from the Contract Should display. Otherwise the list of Lost Reason Codes for the Opportunity are listed here.
SFDC1-769 : Updated the Picklist Values and removed old Values.
SFDC1-6704 : Updated the Picklist Values and removed old Values.</description>
        <inlineHelpText>Choose a valid reason from the dropdown list</inlineHelpText>
        <label>Lost Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bankruptcy/Went out of business</fullName>
                </value>
                <value>
                    <fullName>Company Too Small/Retail/Commerce</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Contact Non Responsive/Wrong Contact</fullName>
                </value>
                <value>
                    <fullName>Customer exiting business</fullName>
                </value>
                <value>
                    <fullName>Customer has merged / restructured</fullName>
                </value>
                <value>
                    <fullName>Customer Lost Bid</fullName>
                </value>
                <value>
                    <fullName>Cutting Costs/Lost Budget</fullName>
                </value>
                <value>
                    <fullName>Decided to do it Themselves</fullName>
                </value>
                <value>
                    <fullName>Duplicate/Existing Opp</fullName>
                </value>
                <value>
                    <fullName>IHSM Decision to Pass/No Bid</fullName>
                </value>
                <value>
                    <fullName>Key contact left company</fullName>
                </value>
                <value>
                    <fullName>Military Base Closure</fullName>
                </value>
                <value>
                    <fullName>No/low usage</fullName>
                </value>
                <value>
                    <fullName>No further interest, has all information needed</fullName>
                </value>
                <value>
                    <fullName>Non Payment</fullName>
                </value>
                <value>
                    <fullName>Out of business/Site Closure</fullName>
                </value>
                <value>
                    <fullName>Product/Solution does not match need</fullName>
                </value>
                <value>
                    <fullName>Product discontinued</fullName>
                </value>
                <value>
                    <fullName>Project completed/cancelled</fullName>
                </value>
                <value>
                    <fullName>Terms &amp; Conditions Issues</fullName>
                </value>
                <value>
                    <fullName>Unfavorable Pricing</fullName>
                </value>
                <value>
                    <fullName>Systematically Closed Lost - Past Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LostReasonDescription__c</fullName>
        <description>SFDC1 - 171 ; For lost contract/Deal; Describe the reason for lost deal</description>
        <inlineHelpText>Provide more information for losing this deal</inlineHelpText>
        <label>Lost Reason Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MISActivityAdded__c</fullName>
        <description>SFDC1-2243 Whenever an activity is created for an opportunity,  MISActivityAdded field is auto populated with the current timestamp.</description>
        <inlineHelpText>System Managed Field: This field is used for MIS pipeline reporting. Whenever an activity is created for an opportunity,  MISActivityAdded field is auto populated with the current timestamp.</inlineHelpText>
        <label>MIS Activity Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MISAttachmentAdded__c</fullName>
        <description>SFDC1-2243 Whenever an Attachment is added to an opportunity,  MISAttachmentAdded field is auto populated with the current timestamp.</description>
        <inlineHelpText>System Managed Field. This field is used for MIS pipeline reporting. Whenever an Attachment is added to an opportunity,  MISAttachmentAdded field is auto populated with the current timestamp.</inlineHelpText>
        <label>MIS Attachment Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MarketingCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1 -171 ; Look up field for Marketing Campaign on Opportunity page layout</description>
        <inlineHelpText>Please select a Marketing Camapign</inlineHelpText>
        <label>Marketing Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MigrationSourceID__c</fullName>
        <description>SFDC1-1192 This field is see the source ID that created the opportunity that was migrated
SFDC1-2219 Rename Migration Source ID to External Source ID</description>
        <inlineHelpText>Migration Source ID</inlineHelpText>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiYear__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-54 field to track if opportunity has multi-year schedules.</description>
        <inlineHelpText>Populates from the Products if term of contract is greater than or equal to 2 years</inlineHelpText>
        <label>MultiYear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextReview__c</fullName>
        <description>SFDC1-4551. This field will hold the date value of Next Review.</description>
        <label>Next Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OaRStatus__c</fullName>
        <description>SFDC1-6709 : Field to hold the status of the Opportunity at Risk record associated to the opportunity</description>
        <label>OaRStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <description>SFDC1-8125: Used in &quot;Contract Management&quot; case lightning page layout</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Name</inlineHelpText>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityOwner__c</fullName>
        <description>SFDC1-8125: Used in &quot;Contract Management&quot; case lightning page layout</description>
        <formula>Owner.FirstName + &apos; &apos;+ Owner.LastName</formula>
        <inlineHelpText>Opportunity Owner name</inlineHelpText>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityRecordType__c</fullName>
        <description>SFDC1-6174 Formula field that displays opportunity record type on page layout</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Record Type</inlineHelpText>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1 -171; Look up field for any related opportunity on opportunity record/ pagelayout</description>
        <inlineHelpText>Please select a related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunitynum__c</fullName>
        <description>SFDC1 -171 (alphanumeric - Read Only);Automatic generated - OP+10 digits (OP-#####);
SFDC1-3816 Rename Opportunity ID field to Opportunity Num</description>
        <displayFormat>OP{0000000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>System generated opportunity number</inlineHelpText>
        <label>Opportunity Num</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Overlay__c</fullName>
        <description>SFDC1-7037: To Summarize all users in the overlay split (SMEs)</description>
        <inlineHelpText>Roll ups all users that are in an Opportunity Split of type Overlay.</inlineHelpText>
        <label>Overlay</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PKIDOpp__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Opp{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Opp</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PORequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1- 535 ;Checkbox fields on opportunity which is automatically populated from Account, SFDC1-959 : Added &apos;?&apos; to the Label.</description>
        <label>PO Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerAccountId__c</fullName>
        <description>For Partner Community.  Used to reference Channel Partner Account Id

This field is being used in Community related changes</description>
        <formula>Owner.PartnerAccountId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousOpportunityOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-311 : This field will be used to maintain the old Owner of the Opportunity when Owner is changed. Will be populate using Process Builder.</description>
        <label>Previous Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousYearOpportunitylink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1 -171; Link to the Previous Year&apos;s Opportunity on Renewals</description>
        <inlineHelpText>Please select opportunity</inlineHelpText>
        <label>Previous Year Opportunity link</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousYearTotalSalesPrice__c</fullName>
        <description>SFDC1-370 Pricing field to be populated via SAP integration</description>
        <inlineHelpText>Populated from SAP</inlineHelpText>
        <label>Previous Year Total Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryContact__c</fullName>
        <description>SFDC1-5228 Account Overview Report, To store primary contact name at Opportunity record level.</description>
        <inlineHelpText>To store primary contact name at Opportunity record level.</inlineHelpText>
        <label>Primary Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorYearTotalDiscountAmtRollup__c</fullName>
        <description>SFDC1-967 Creating Product Total Fields
SFDC1-5859 Calculation: Renewals Only - Sum of the Prior Year Total Discount Amt</description>
        <inlineHelpText>Renewals Only - Sum of the Prior Year Total Discount Amt</inlineHelpText>
        <label>Prior Year Total Discount Amt</label>
        <summarizedField>OpportunityLineItem.PriorYearTotalDiscountAmt__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PriorYearTotalRollup__c</fullName>
        <description>SFDC1-967 Creating Product Total Fields
SFDC1-5859 Calculation: Renewals Only - Sum of the Prior Year Total Sales Price for Active Products</description>
        <inlineHelpText>Renewals Only - Sum of the Prior Year Total Sales Price for Active Products</inlineHelpText>
        <label>Prior Year Total</label>
        <summarizedField>OpportunityLineItem.PriorYearTotalSalesPrice__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProcessedContractNum__c</fullName>
        <description>SFDC1 -171; Field presents total number of contracts for a particular opportunity
SFDC1-5212 : Field Updated from Number to TEXT
SFDC1-9009 : Rename Processed Contract Num to SAP Processed Contract Num on the Opportunity.</description>
        <inlineHelpText>SAP Contract Number</inlineHelpText>
        <label>SAP Processed Contract Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCount__c</fullName>
        <description>SFDC1-546; The field gives total product present in a Opportunity</description>
        <label>Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>SFDC1-7525 product family calculated from related products
SFDC1-8785 : updating the field type to Long Text Area</description>
        <inlineHelpText>Product family of related products automatically populated by system</inlineHelpText>
        <label>Product Family</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <description>SFDC1-5228 Account Overview Report, To store rollup comma separated unique Product Group values of related products at Opportunity record level.</description>
        <inlineHelpText>To display concatenated Product Groups in a single text field.</inlineHelpText>
        <label>Product Group</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProfitCenter__c</fullName>
        <description>SFDC1-7525 Profit center to be rolled up from opportunity product&apos;s related product
SFDC1-8785 : updating the field type to Long Text Area</description>
        <inlineHelpText>Profit center for related products automatically populated by system</inlineHelpText>
        <label>Profit Center</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuoteEndDate__c</fullName>
        <description>SFDC1-9330 This field is required for DocuSign, to populate details when Quote ends</description>
        <formula>TODAY() +  QuoteValidFor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quote End Date</inlineHelpText>
        <label>Quote End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteValidFor__c</fullName>
        <defaultValue>60</defaultValue>
        <description>SFDC1-7146:Feature to define how long a quote is valid for</description>
        <inlineHelpText>Default is 60 days</inlineHelpText>
        <label>Quote Valid For</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROIAnalysisCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadyForProcessingContractExist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5701, this will be set to true by the process builder on Contract whenever Contract Status changes to &quot;Ready For Processing&quot;.</description>
        <label>Ready For Processing Contract Exist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecommendedUnitPriceTotalRollup__c</fullName>
        <description>SFDC1-967 Creating Product Total Fields
SFDC1-5859 Calculation: Sum of the Recommended Unit Price field on the Opp Products</description>
        <inlineHelpText>Sum of the Recommended Unit Price field on the Opp Products</inlineHelpText>
        <label>Recommended Unit Price Total</label>
        <summarizedField>OpportunityLineItem.RecommendedUnitPrice__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReferredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-926 This field is filled in when a lead is converted. The Referred By Field from Lead is copied here during conversion.</description>
        <inlineHelpText>Referred By</inlineHelpText>
        <label>Referred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReferredBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2159 
Related case required for Response Management Cases</description>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RenewalAutoCloseDate__c</fullName>
        <description>SFDC1-5809, this is currently set as 3 Business days (excluding Sat and Sun) before the Contract End date via process builder. Will be set only via process builder hence Non editable to all users.</description>
        <label>Renewal Auto Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RenewalTerm__c</fullName>
        <description>SFDC1-7221;Renewal Term field on Renewals</description>
        <formula>Text(ContractBeingRenewed__r.RenewalTerm__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Renewal Term on Related Contract</inlineHelpText>
        <label>Renewal Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revisit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9500 Revisit checkbox on Opportunity</description>
        <inlineHelpText>This checkbox should be checked if opportunity should be visited again in future.</inlineHelpText>
        <label>Revisit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskProbability__c</fullName>
        <description>SFDC1-4163 This field is a roll up summary from renewal at risk object</description>
        <label>Risk Probability</label>
        <summarizedField>RenewalatRisk__c.RiskProbability__c</summarizedField>
        <summaryForeignKey>RenewalatRisk__c.OpportunityAtRisk__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SAPContractNumber__c</fullName>
        <description>SFDC1 -171 ; Field presents SAP Contract number coming from system integration.
SFDC1-5022 : updated the Field type from Number to TEXT.</description>
        <inlineHelpText>Populate by System integration. Do not populate manually</inlineHelpText>
        <label>SAP Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOpsReviewedDate__c</fullName>
        <description>SFDC1-6955: Date field that will be filled in by Sales Ops user</description>
        <label>Sales Ops Reviewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesOpsReviewed__c</fullName>
        <description>SFDC1-6955: A text field that will be filled in by Sales Ops user</description>
        <label>Sales Ops Reviewed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOpsStatus__c</fullName>
        <description>SFDC1-6955: Picklist to store Sales Ops status</description>
        <label>Sales Ops Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initially Reviewed</fullName>
                </value>
                <value>
                    <fullName>Query/Issue</fullName>
                </value>
                <value>
                    <fullName>Signed-off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesRegion__c</fullName>
        <description>SFDC1-529 This field shows the Opportunity Owner&apos;s Region on Opportunity</description>
        <formula>TEXT(Owner.UserRegion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales Region of Opportunity Owner</inlineHelpText>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesSpecialists__c</fullName>
        <description>SFDC1-7037: To Summarize who is on the Revenue Split (Sales Specialist)</description>
        <inlineHelpText>Roll ups all users that are in an Opportunity Split of type Sales Specialists</inlineHelpText>
        <label>Sales Specialists</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShipToCity__c</fullName>
        <description>SFDC1-5785: Ship To : City holds City Name in Shipping Information</description>
        <inlineHelpText>City Name in Shipping Information</inlineHelpText>
        <label>Ship To : City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToClientName__c</fullName>
        <description>SFDC1-5785: Ship To : Client Name contains Client Name in Shipping Information</description>
        <inlineHelpText>Client Name in Shipping Information</inlineHelpText>
        <label>Ship To : Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCompanySAP__c</fullName>
        <description>SFDC1-5785: Ship To : Company SAP# holds Company SAP# in Shipping Information</description>
        <inlineHelpText>Company SAP# in Shipping Information</inlineHelpText>
        <label>Ship To : Company SAP#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToContactEmailAddress__c</fullName>
        <description>SFDC1-5785: Ship To : Contact Email Address holds Contact Email Address in Shipping Information</description>
        <inlineHelpText>Contact Email Address in Shipping Information</inlineHelpText>
        <label>Ship To : Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ShipToContactFirstName__c</fullName>
        <description>SFDC1-5785: Ship To : Contact First Name holds Contact First Name in Shipping Information</description>
        <inlineHelpText>Contact First Name in Shipping Information</inlineHelpText>
        <label>Ship To : Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToContactLastName__c</fullName>
        <description>SFDC1-5785: Ship To : Contact Last Name holds Contact Last Name in Shipping Information</description>
        <inlineHelpText>Contact Last Name in Shipping Information</inlineHelpText>
        <label>Ship To : Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToContactSAP__c</fullName>
        <description>SFDC1-5785: Ship To : Contact SAP# holds Contact SAP Number in Shipping Information</description>
        <inlineHelpText>Contact SAP Number in Shipping Information</inlineHelpText>
        <label>Ship To : Contact SAP#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToContactTelephoneNumber__c</fullName>
        <description>SFDC1-5785: Ship To : Contact Telephone Number holds Contact Telephone Number in Shipping Information</description>
        <inlineHelpText>Contact Telephone Number in Shipping Information</inlineHelpText>
        <label>Ship To : Contact Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCountryNew__c</fullName>
        <description>SFDC1-5785: Ship To : Country holds Country Name in Shipping Information</description>
        <inlineHelpText>Country Name in Shipping Information</inlineHelpText>
        <label>Ship To : Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToPostalZipCode__c</fullName>
        <description>SFDC1-5785: Ship To : Postal/Zip Code holds Postal/ZipCode in Shipping Information</description>
        <inlineHelpText>Postal/ZipCode in Shipping Information</inlineHelpText>
        <label>Ship To : Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToStateProvince__c</fullName>
        <description>SFDC1-5785: Ship To : State/Province holds State/Province Name in Shipping Information</description>
        <inlineHelpText>State/Province Name in Shipping Information</inlineHelpText>
        <label>Ship To : State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToStreet__c</fullName>
        <description>SFDC1-5785: Ship To : Street holds Street Name in Shipping Information</description>
        <inlineHelpText>Street Name in Shipping Information</inlineHelpText>
        <label>Ship To : Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <description>SFDC1 -171; Describe source of the lead/opportunity
SFDC1-2219; Rename Source System to External Source System
SFDC1-8491: Updated picklist values</description>
        <inlineHelpText>Please select a value</inlineHelpText>
        <label>External Source System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Manually Generated</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>IHS CRM</fullName>
                </value>
                <value>
                    <fullName>Clone</fullName>
                </value>
                <value>
                    <fullName>Lead Generated</fullName>
                </value>
                <value>
                    <fullName>Third Party System</fullName>
                </value>
                <value>
                    <fullName>Polk Salesforce</fullName>
                </value>
                <value>
                    <fullName>Markit Salesforce</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Markit SFDC</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Markit Salesforce.com</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Polk SFDC</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Polk Salesforce.com</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <description>SFDC1 - 171 ; Field present different opportunity/deal type;SFDC1-1750 - Renaming Sub Type label to Sales Channel and updating its picklist values</description>
        <inlineHelpText>Direct Customer or Global Alliance?</inlineHelpText>
        <label>Sales Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Sale</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Global Alliance</fullName>
                </value>
                <value>
                    <fullName>Add On</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Forecast Only</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Multi Element</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>One Time</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubscriptionID__c</fullName>
        <description>SFDC1 - 171 ;Will be populated from SAP through Processed Contract Integration</description>
        <inlineHelpText>Populated through Contract integration. Do not populate manually</inlineHelpText>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synergy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7637 : This field is created to mark an opportunity as a synergy opportunity</description>
        <inlineHelpText>Please select if this Opportunity is a synergy Opportunity</inlineHelpText>
        <label>Synergy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMCAcknowledged__c</fullName>
        <description>SFDC1-4551. This field will hold of the date of when Transaction Management Committee Acknowledged.</description>
        <label>TMC Acknowledged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TMCActiveStatus__c</fullName>
        <description>SFDC1-4551. This will be pictorial representation of TMC Active Status.</description>
        <formula>IF(
OR( 
AND(IsClosed = False, CloseDate &lt; TODAY()), 
AND(OR(ISPICKVAL( ForecastCategoryName , &quot;Pipeline&quot;), ISPICKVAL( ForecastCategoryName , &quot;Best Case&quot;)), 
IsClosed = False , CloseDate &lt; TODAY()+ 10) 
),IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red &quot;), 
IF(
OR( 
AND(IsClosed = False , ISPICKVAL( ForecastCategoryName , &quot;Pipeline&quot;) , CloseDate &lt; TODAY()+ 30), 
AND(IsClosed = False , CloseDate - CloseDateOriginal__c &gt; 60) 
),IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;), 
IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;)
)
)</formula>
        <label>TMC Active Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMCStatus__c</fullName>
        <description>SFDC1-4551. This field will hold the value of current Transaction Management Committee status.</description>
        <label>TMC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reviewed - Not Required</fullName>
                </value>
                <value>
                    <fullName>Review Required</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalAnnualContractValue__c</fullName>
        <description>SFDC1-5906, To roll up the Annual Contract Value from Contract. Will be calculated via process builder.</description>
        <label>Total Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAnnualizedAmount__c</fullName>
        <description>SFDC1-9136 annualized total price of all opportunity products except for lost products</description>
        <inlineHelpText>Annualized total price of all active products</inlineHelpText>
        <label>Total Annualized Amount</label>
        <summarizedField>OpportunityLineItem.AnnualizedTotalAmount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>